# clr-solutions

catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
