[package]
name = "headr"
version = "0.1.0"
edition = "2021"
author = "Ken Youens-Clark <kyclark@gmail.com>"
about = "Rust head"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
